--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -40,8 +40,9 @@
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
     "cypress": "^9.7.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.49.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-storybook": "^0.6.12",
